@@ -1,3 +1,8 @@
+2017-05-15  Carl Hetherington  <cth@carlh.net>
+
+	* Backport fixes from master which correct subtitles being
+	faded in early (before their effects).
+
 2017-04-06  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.10.5 released.
